<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".kalender.KalenderActivity"
    android:background="@drawable/standarthintergrund">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="103dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_marginStart="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/imageButton_kalender_zurueck"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="60dp"
                android:background="@drawable/zurueck"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/kalender"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="96dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout">

        <ScrollView
            android:id="@+id/scrollView4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/textViewInternetError"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/standart_item_background">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="10dp"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/buttonChangeMonthLeft"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:layout_weight="1"
                                android:background="@drawable/calender_switchmonth_background"
                                android:backgroundTint="@null"
                                android:fontFamily="sans-serif-black"
                                android:paddingBottom="10dp"
                                android:text="@string/kalender_switch_left"
                                android:textColor="@color/black"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/textViewShowMonth"
                                android:layout_width="200dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:fontFamily="sans-serif-black"
                                android:text=""
                                android:textAlignment="center"
                                android:textColor="@color/black"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <Button
                                android:id="@+id/buttonChangeMonthRight"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:layout_weight="1"
                                android:background="@drawable/calender_switchmonth_background"
                                android:backgroundTint="@null"
                                android:fontFamily="sans-serif-black"
                                android:paddingBottom="10dp"
                                android:text="@string/kalender_switch_right"
                                android:textColor="@color/black"
                                android:textSize="20sp" />
                        </LinearLayout>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center">

                            <GridLayout
                                android:id="@+id/dayGrid"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="10dp"
                                android:columnCount="7"
                                android:rowCount="7">

                                <TextView
                                    android:id="@+id/textViewShowDayNameMontag"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:paddingBottom="10dp"
                                    android:text="@string/kalender_m"
                                    android:textAlignment="center"
                                    android:textColor="@color/black"
                                    android:textSize="20sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/textViewShowDayNameDienstag"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:paddingBottom="10dp"
                                    android:text="@string/kalender_d"
                                    android:textAlignment="center"
                                    android:textColor="@color/black"
                                    android:textSize="20sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/textViewShowDayNameMittwoch"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:paddingBottom="10dp"
                                    android:text="@string/kalender_m"
                                    android:textAlignment="center"
                                    android:textColor="@color/black"
                                    android:textSize="20sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/textViewShowDayNameDonnerstag"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:paddingBottom="10dp"
                                    android:text="@string/kalender_d"
                                    android:textAlignment="center"
                                    android:textColor="@color/black"
                                    android:textSize="20sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/textViewShowDayNameFreitag"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:paddingBottom="10dp"
                                    android:text="@string/kalender_f"
                                    android:textAlignment="center"
                                    android:textColor="@color/black"
                                    android:textSize="20sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/textViewShowDayNameSamstag"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:paddingBottom="10dp"
                                    android:text="@string/kalender_s"
                                    android:textAlignment="center"
                                    android:textColor="@color/black"
                                    android:textSize="20sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/textViewShowDayNameSonntag"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:paddingBottom="10dp"
                                    android:text="@string/kalender_s"
                                    android:textAlignment="center"
                                    android:textColor="@color/black"
                                    android:textSize="20sp"
                                    android:textStyle="bold" />
                            </GridLayout>
                        </TableRow>

                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="30dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_ShowEvent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/standart_button_background"
                        android:text="@string/kalender_show_events"
                        android:textSize="20sp"
                        android:visibility="invisible"
                        app:backgroundTint="@null" />

                    <Button
                        android:id="@+id/button_event_erstellen"
                        android:layout_width="65dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:background="@drawable/calender_button_background"
                        android:text="@string/kalender_event_erstellen"
                        android:textSize="30sp"
                        app:backgroundTint="@null" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/textViewInternetError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/internetErrorBackground"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/keine_internetverbindung"
            android:textAlignment="center"
            android:textSize="20sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>