<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="600dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/standarthintergrund">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="103dp"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/imageButton_kalender_edit_event_zurueck"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginEnd="50dp"
                        android:background="@drawable/zurueck"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                    <TextView
                        android:id="@+id/textView_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/kalender_event"
                        android:textColor="@color/black"
                        android:textSize="40sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/constraintLayout">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView_kalender_edit_show_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/standart_item_background"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="25sp" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/standart_item_background">

                        <EditText
                            android:id="@+id/editText_kalender_edit_eventText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:fontFamily="sans-serif-black"
                            android:hint="@string/kalender_edittext_hint_popup"
                            android:inputType="textMultiLine"
                            android:maxLines="5"
                            android:minHeight="48dp"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:scrollbars="vertical"
                            android:textSize="25sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/button_kalender_edit_event_abbrechen"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_marginEnd="2dp"
                                android:layout_weight="1"
                                android:background="@drawable/standart_button_background"
                                android:fontFamily="sans-serif-black"
                                android:paddingTop="10dp"
                                android:paddingBottom="10dp"
                                android:text="@string/abbrechen"
                                android:textSize="18sp"
                                app:backgroundTint="@null" />

                            <Button
                                android:id="@+id/button_kalender_edit_event_bestaetigen"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="2dp"
                                android:layout_marginEnd="5dp"
                                android:layout_weight="1"
                                android:background="@drawable/standart_button_background"
                                android:fontFamily="sans-serif-black"
                                android:paddingTop="10dp"
                                android:paddingBottom="10dp"
                                android:text="@string/bestaetigen"
                                android:textSize="18sp"
                                app:backgroundTint="@null" />
                        </LinearLayout>

                        <Button
                            android:id="@+id/button_kalender_edit_event_loeschen"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:layout_weight="1"
                            android:background="@drawable/standart_button_background"
                            android:fontFamily="sans-serif-black"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:text="@string/loeschen"
                            android:textSize="18sp"
                            app:backgroundTint="@null" />

                    </LinearLayout>

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>